--- a/Redes/redes.html
+++ b/Redes/redes.html
@@ -16,7 +16,7 @@
     </div>
     <p>Redes</p>
     <div class="casa">
-         <a href="/Página Inicial/index.html"><img src="/Imagens/casa.png" alt="casa" width="50px"> </a>
+         <a href="/index.html"><img src="/Imagens/casa.png" alt="casa" width="50px"> </a>
     </div>
     </header>
     <div class="redes">
