--- a/Automação Industrial/automacao.html
+++ b/Automação Industrial/automacao.html
@@ -16,7 +16,7 @@
     </div>
     <p>Automação Industrial</p>
     <div class="casa">
-         <a href="/Página Inicial/index.html"><img src="/Imagens/casa.png" alt="casa" width="50px"> </a>
+         <a href="/index.html"><img src="/Imagens/casa.png" alt="casa" width="50px"> </a>
     </div>
     </header>
     <div class="automacao">
