--- a/Linguagem de programação/linguagem.html
+++ b/Linguagem de programação/linguagem.html
@@ -15,7 +15,7 @@
         </div>
         <p>Linguagem de Programação</p>
         <div class="casa">
-            <a href="/Página Inicial/index.html"><img src="/Imagens/casa.png" alt="casa" width="50px"> </a> 
+            <a href="/index.html"><img src="/Imagens/casa.png" alt="casa" width="50px"> </a> 
         </div>
         </header>
 
